--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local*
 
 # vercel
 .vercel
@@ -39,3 +40,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+".env.local"
+
+# ========================================
+# ログ・エラーナレッジ(ローカル管理)
+# 個人の学習記録として保持し、GitHubには公開しない
+# ========================================
+docs/logs/
+docs/errors/
+*.log.md
+*.error.md
+
+# ただし、インデックスファイルは除外しない(任意)
+!docs/logs/README.md
+!docs/errors/README.md
